# presentations

./: .gitmodules  README.md  circle.yml  index.html  ipc-anim.cabal  print.html  site.hs  talk.cabal
code/: HandleSVC_soc.html  HandleSVC_soc2.html  SVCStartDMACompact2.html  foldexpr_theory.html  variadic_templates_theory.html
css/: css.css  generated.css  generated_print.css  pdf.css  reveal.css
css/theme/: black.css  league.css
lib/css/: zenburn.css
live/: 01_generators.cpp  01a_generators.cpp  01b_generators.cpp  02_generators.cpp  dummy_env.hpp  generators.cpp  ipc.hpp  live.cpp  live_regcount.cpp  magic.hpp
slides/: 01.html  01_title.html  02.html  02_whoami.html  03_intro.html  03_intro_3ds.html  03_theory.html  04_intro_general.html  04_live.html  05_intro_3ds.html  07_ipc.html  07b_ipc_declint.html  07b_ipc_vision.html  07c_ipc_declint.html  07c_ipc_functraits.html  07c_ipc_vision.html  07d_ipc_generators.html  07e_ipc_declint.html  08_declint.html  09_asm.html  10a_conclusion.html  10b_end.html
src/: Css.hs  Svg.hs  site.hs
templates/: default.html
