name:               ipc-anim
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs: src
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , clay
                  , lucid-svg
                  , text
                  , text-show
  ghc-options:      -threaded
  default-language: Haskell2010
